# gatekeep

./: .gitignore  BRIEF.md  DECISIONS.md  PLAN.md  README.md  SELF_CHECK.md  SELF_CHECK_report.json  gatekeep.yml  index.html
.claude/commands/: goal.md
benchmark/: .gitignore
benchmark/contracts/: swebench_patch.yml
benchmark/data/: fetch_summary.json  fetch_summary_20250226_sweagent_claude-3-7-sonnet-20250219.json  swebench_lite_test.parquet  traj_distilled.json
benchmark/data/raw/20250226_sweagent_claude-3-7-sonnet-20250219/astropy__astropy-12907/: patch.diff
benchmark/data/raw/20250226_sweagent_claude-3-7-sonnet-20250219/astropy__astropy-14182/: patch.diff
benchmark/data/raw/20250226_sweagent_claude-3-7-sonnet-20250219/astropy__astropy-14365/: patch.diff
benchmark/data/raw/20250226_sweagent_claude-3-7-sonnet-20250219/astropy__astropy-14995/: patch.diff
benchmark/data/raw/20250226_sweagent_claude-3-7-sonnet-20250219/astropy__astropy-7746/: patch.diff
benchmark/results/: ab_raw_rows.json  ab_raw_rows_run2.json  ab_summary.json  ab_summary_run2.json
benchmark/scripts/: distill_trajs.py  fetch_swebench_run.py  fetch_swebench_run2.py  run_ab.py  run_ab_second_run.py
gatekeep/: .gitignore  LICENSE  README.md  gatekeep_single.py  pyproject.toml
gatekeep/.github/workflows/: gatekeep.yml
gatekeep/src/gatekeep/: __init__.py  checks.py  cli.py  engine.py
gatekeep/tests/: test_engine.py  test_single_file_parity.py
marketing/: MARKETING.md
paper/: paper.tex
(+260 files in other folders)
